--- a/homework.ipynb
+++ b/homework.ipynb
@@ -1338,7 +1338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "W1tI40DQZJTZ"
       },
@@ -1361,9 +1361,11 @@
       ],
       "source": [
         "# YOUR CHANGES HERE\n",
+        "\n",
+        "# use ddof=1 to account for sample correction (adjusted)\n",
         "sample_var = mango_data[\"rated_flavor\"]\n",
         "print(sample_var)\n",
-        "p14 = np.var(sample_var)"
+        "p14 = np.var(sample_var, ddof=1)"
       ]
     },
     {
@@ -1480,26 +1482,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "id": "78iwN5f4bKtS"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Ellipsis"
-            ]
-          },
-          "execution_count": 40,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "p16 = \"c\"\n",
+        "\n",
+        "#a=1.0\n",
+        "#b=0.775000\n",
+        "#c=0.675"
       ]
     },
     {
@@ -1515,39 +1510,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "id": "ve2czA0Ebzdf"
       },
       "outputs": [
         {
-          "ename": "KeyError",
-          "evalue": "'i'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-            "\u001b[31mKeyError\u001b[39m: 'i'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[77]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# YOUR CHANGES HERE\u001b[39;00m\n\u001b[32m      3\u001b[39m load_data = pd.read_csv(\u001b[33m\"\u001b[39m\u001b[33mf17.tsv\u001b[39m\u001b[33m\"\u001b[39m, sep=\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m p17 = [\u001b[43mload_data\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mi\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m load_data]\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(p17)\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
-            "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-            "\u001b[31mKeyError\u001b[39m: 'i'"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "         a       b       c       d       e       f\n",
+            "0   0.1434  0.6360  0.3068  0.2098  0.2497  0.3610\n",
+            "1   0.4755  0.9323  0.6703  0.3109  0.8622  0.0007\n",
+            "2   0.7065  0.0967  0.6870  0.4053  0.2323  0.7900\n",
+            "3   0.5123  0.7487  0.0561  0.3567  0.6127  0.4924\n",
+            "4   0.9723  0.7364  0.0634  0.5245  0.2006  0.7337\n",
+            "..     ...     ...     ...     ...     ...     ...\n",
+            "95  0.9568  0.0683  0.2097  0.5865  0.0286  0.7756\n",
+            "96  0.3844  0.7427  0.4933  0.2288  0.6870  0.2125\n",
+            "97  0.7794  0.5513  0.4934  0.2890  0.3258  0.2240\n",
+            "98  0.9615  0.8815  0.2494  0.8911  0.8532  0.9846\n",
+            "99  0.5816  0.6560  0.2380  0.9527  0.7113  0.4052\n",
+            "\n",
+            "[100 rows x 6 columns]\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "(np.float64(0.507912),\n",
+              " np.float64(0.47515999999999997),\n",
+              " np.float64(0.43401),\n",
+              " np.float64(0.504815),\n",
+              " np.float64(0.5160610000000001),\n",
+              " np.float64(0.496363))"
+            ]
+          },
+          "execution_count": 80,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
         "load_data = pd.read_csv(\"f17.tsv\", sep=\"\\t\")\n",
-        "p17 = \n",
-        "print(p17)"
+        "print(load_data)\n",
+        "cola = np.mean(load_data[\"a\"])\n",
+        "colb = np.mean(load_data[\"b\"])\n",
+        "colc = np.mean(load_data[\"c\"])\n",
+        "cold = np.mean(load_data[\"d\"])\n",
+        "cole = np.mean(load_data[\"e\"])\n",
+        "colf = np.mean(load_data[\"f\"])\n",
+        "p15 = cola, colb, colc, cold, cole, colf\n",
+        "p15"
       ]
     },
     {
