--- a/homework.ipynb
+++ b/homework.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 51,
       "metadata": {
         "id": "vU_BLpXEBq8E"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 52,
       "metadata": {
         "id": "WwPXKuYW-MeA"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -248,7 +248,7 @@
               "7                    2             2  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 53,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 54,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -294,7 +294,7 @@
               "Name: softness, dtype: int64"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -330,7 +330,7 @@
               "19"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 56,
       "metadata": {
         "id": "WyNxML4oAvRh"
       },
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -387,7 +387,7 @@
               "np.float64(2.25)"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 59,
       "metadata": {
         "id": "iN_rB_QJBk_K"
       },
@@ -452,7 +452,7 @@
               "Text(0.5, 1.0, 'Rated Flavor vs Estimated Sweetness')"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 59,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -493,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 60,
       "metadata": {
         "id": "ZcUQ3mnBOLmU"
       },
@@ -507,7 +507,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -531,7 +531,7 @@
               "Name: prediction, dtype: int64"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -555,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 62,
       "metadata": {
         "id": "CNL0vOHrDfmT"
       },
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -601,7 +601,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -623,7 +623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 64,
       "metadata": {
         "id": "tI7Fr0blQFJo"
       },
@@ -635,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -659,7 +659,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 65,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -683,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 66,
       "metadata": {
         "id": "zvIjSLCdGbZM"
       },
@@ -716,7 +716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 67,
       "metadata": {
         "id": "j8QCAkWMGdkv"
       },
@@ -727,7 +727,7 @@
               "array([0.2, 4. , 0.8, 0.8, 0. , 0.8, 0. , 0.8])"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 67,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -749,7 +749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 68,
       "metadata": {
         "id": "7O7AReMcTCEJ"
       },
@@ -761,7 +761,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -785,7 +785,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 69,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 70,
       "metadata": {
         "id": "P-KRYZurHBQY"
       },
@@ -841,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 71,
       "metadata": {
         "id": "vxJZcCrlHDGY"
       },
@@ -852,7 +852,7 @@
               "np.float64(3.795000000000001)"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -875,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 72,
       "metadata": {
         "id": "d65RLeqxVGeL"
       },
@@ -898,7 +898,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 73,
       "metadata": {
         "id": "ihAvfuV4VMLS"
       },
@@ -917,7 +917,7 @@
               "Name: prediction, dtype: int64"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 73,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 74,
       "metadata": {
         "id": "88Ip7dA5TyQg"
       },
@@ -963,7 +963,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 75,
       "metadata": {
         "id": "xXCnP3iTULWw"
       },
@@ -974,7 +974,7 @@
               "np.float64(2.5)"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 75,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -996,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 76,
       "metadata": {
         "id": "MC-XVY3IWz3x"
       },
@@ -1019,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 77,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1042,7 +1042,7 @@
               "dtype: float64"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 77,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1064,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 78,
       "metadata": {
         "id": "J3emV8dqXlgN"
       },
@@ -1078,7 +1078,7 @@
         "\n",
         "# L1 loss prediction = |f(x) - y|\n",
         "calc_L1 = p10(mango_data) - mango_data[\"rated_flavor\"]\n",
-        "p10 = np.abs(calc_L1)\n"
+        "p10 = np.mean(np.abs(calc_L1))\n"
       ]
     },
     {
@@ -1092,7 +1092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 79,
       "metadata": {
         "id": "64OoS_GZXogM"
       },
@@ -1100,18 +1100,10 @@
         {
           "data": {
             "text/plain": [
-              "0    1.5\n",
-              "1    3.0\n",
-              "2    0.3\n",
-              "3    0.5\n",
-              "4    0.2\n",
-              "5    0.1\n",
-              "6    0.2\n",
-              "7    0.1\n",
-              "dtype: float64"
+              "np.float64(0.7375)"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 79,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1132,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [
         {
@@ -1171,7 +1163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 81,
       "metadata": {},
       "outputs": [
         {
@@ -1180,7 +1172,7 @@
               "np.float64(2.2142857142857144)"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 81,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1203,7 +1195,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 82,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1234,7 +1226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [
         {
@@ -1243,7 +1235,7 @@
               "np.float64(0.33333333333333304)"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 83,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1267,14 +1259,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_1751/229892201.py:16: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+            "/tmp/ipykernel_2110/229892201.py:16: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
             "  p13 = float(model.coef_)\n"
           ]
         }
@@ -1307,7 +1299,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [
         {
@@ -1316,7 +1308,7 @@
               "0.5555555555555557"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 85,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1338,7 +1330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 86,
       "metadata": {
         "id": "W1tI40DQZJTZ"
       },
@@ -1377,16 +1369,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "np.float64(1.75)"
+              "np.float64(2.0)"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 87,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1412,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 88,
       "metadata": {
         "id": "_1Ty-1wxaKgp"
       },
@@ -1439,7 +1431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 89,
       "metadata": {},
       "outputs": [
         {
@@ -1454,7 +1446,7 @@
               " np.float64(2.0))"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 89,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1482,7 +1474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 90,
       "metadata": {
         "id": "78iwN5f4bKtS"
       },
@@ -1510,7 +1502,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 91,
       "metadata": {
         "id": "ve2czA0Ebzdf"
       },
@@ -1546,7 +1538,7 @@
               " np.float64(0.496363))"
             ]
           },
-          "execution_count": 80,
+          "execution_count": 91,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1562,8 +1554,8 @@
         "cold = np.mean(load_data[\"d\"])\n",
         "cole = np.mean(load_data[\"e\"])\n",
         "colf = np.mean(load_data[\"f\"])\n",
-        "p15 = cola, colb, colc, cold, cole, colf\n",
-        "p15"
+        "p17 = np.mean(cola), np.mean(colb), np.mean(colc), np.mean(cold), np.mean(cole), np.mean(colf)\n",
+        "p17"
       ]
     },
     {
@@ -1579,7 +1571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 92,
       "metadata": {
         "id": "pqbMFuUpaj5m"
       },
@@ -1591,7 +1583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 93,
       "metadata": {
         "id": "JbEO9iX4VwQG"
       },
@@ -1602,7 +1594,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1628,7 +1620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 94,
       "metadata": {
         "id": "Ri6AjxYpcZol"
       },
@@ -1640,7 +1632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1655,7 +1647,7 @@
               "Ellipsis"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 95,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1675,7 +1667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 96,
       "metadata": {},
       "outputs": [
         {
@@ -1685,7 +1677,7 @@
           "traceback": [
             "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
             "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp19\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[96]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp19\u001b[49m\n",
             "\u001b[31mNameError\u001b[39m: name 'p19' is not defined"
           ]
         }
